--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
+    - name: Install pnpm
+      run: npm install -g pnpm    
     - run: pnpm install
     - run: pnpm install --frozen-lockfile
     - run: pnpm build
