--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "module": "node16",
-      "moduleResolution": "node16",
+      "module": "Node16",
+      "moduleResolution": "Node16",
       "lib": ["es2019"],
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
