--- a/service/package.json
+++ b/service/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "@types/node": "22.5.4"
   },
+  "devDependencies": {
+    "@types/node": "22.5.4",
+    "aws-cdk": "2.160.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
