--- a/service/package.json
+++ b/service/package.json
@@ -13,6 +13,7 @@
     "@types/node": "22.5.4"
   },
   "devDependencies": {
+    "esbuild": "^0.14.0",
     "@types/node": "22.5.4",
     "aws-cdk": "2.160.0",
     "ts-node": "^10.9.2",
