--- a/service/package.json
+++ b/service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/lambda.ts --bundle --platform=node --sourcemap --outfile=dist/lambda.js",
+    "build": "tsc",
     "cdk": "cdk",
     "watch": "tsc -w"
 
@@ -13,7 +13,6 @@
     "@types/node": "22.5.4"
   },
   "devDependencies": {
-    "esbuild": "^0.14.0",
     "@types/node": "22.5.4",
     "aws-cdk": "2.160.0",
     "ts-node": "^10.9.2",
