--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -23,7 +23,7 @@ jobs:
     with:
       package: service
       run-build-command: true
-      upload-artifact: false   
+      upload-artifact: true   
 
   deploy-dev:
     name: "Deploy"
@@ -34,4 +34,4 @@ jobs:
       aws-account-number: "954976306395"
       environment: Dev
       working-directory: infra
-      download-artifact: false
+      download-artifact: true
