--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,8 +56,8 @@ jobs:
       run: pnpm exec cdk bootstrap aws://${{ inputs.aws-account-number }}/us-east-1
       env:
         BRANCH_REF: ${{ github.ref }}
-    - name: Check current directory and list files
-      run: ls -R ..
+    - name: Display Lambda path
+      run: node -e "const path = require('path'); console.log(path.join(__dirname, '../../service/src/lambda.ts'))"
     - run: pnpm run deploy "${{ inputs.environment }}/**" --require-approval never 
       env:
         BRANCH_REF: ${{ github.head_ref || github.ref }}
