--- a/infra/package.json
+++ b/infra/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
     "aws-cdk-lib": "2.160.0",
+    "aws-sdk": "^2.1485.0",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   }
