--- a/infra/package.json
+++ b/infra/package.json
@@ -17,7 +17,8 @@
     "@types/node": "22.5.4",
     "aws-cdk": "2.160.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "esbuild": "0.21.5"
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-nodejs": "^1.204.0",
