--- a/service/package.json
+++ b/service/package.json
@@ -10,7 +10,10 @@
 
   },
   "dependencies": {
-    "@types/node": "22.5.4"
+    "@types/node": "22.5.4",
+    "@aws-sdk/client-dynamodb": "3.428.0",
+    "@aws-sdk/lib-dynamodb": "3.428.0",
+    "@types/uuid": "^9.0.6"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
