--- a/service/package.json
+++ b/service/package.json
@@ -7,17 +7,20 @@
     "build": "tsc",
     "cdk": "cdk",
     "watch": "tsc -w"
-
   },
   "dependencies": {
-    "@types/node": "22.5.4",
     "@aws-sdk/client-dynamodb": "3.428.0",
     "@aws-sdk/lib-dynamodb": "3.428.0",
-    "@types/uuid": "^9.0.6"
+    "@aws-sdk/util-dynamodb": "^3.669.0",
+    "@types/node": "22.5.4",
+    "@types/uuid": "^9.0.6",
+    "aws-cdk-lib": "2.160.0",
+    "aws-lambda": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
     "aws-cdk": "2.160.0",
+    "aws-sdk": "^2.1485.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
