--- a/service/package.json
+++ b/service/package.json
@@ -18,6 +18,7 @@
     "aws-lambda": "^1.0.7"
   },
   "devDependencies": {
+    "@aws-sdk/client-eventbridge": "^3.670.0",
     "@types/node": "22.5.4",
     "aws-cdk": "2.160.0",
     "aws-sdk": "^2.1485.0",
