--- a/service/package.json
+++ b/service/package.json
@@ -15,6 +15,7 @@
     "@types/node": "22.5.4",
     "@types/uuid": "^9.0.6",
     "aws-cdk-lib": "2.160.0",
+    "aws-sdk": "^2.1691.0",
     "aws-lambda": "^1.0.7"
   },
   "devDependencies": {
