--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -1,11 +1,9 @@
 {
     "compilerOptions": {
-      "module": "Node16",
-      "moduleResolution": "Node16",
-      "lib": ["es2019"],
+      "module": "CommonJS",
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
-      "target": "es2018",
+      "target": "ES2021",
       "noImplicitAny": true,
       "sourceMap": true,
       "outDir": "dist",
