--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,11 +17,18 @@ jobs:
     with:
       package: infra
 
+  build-service:
+    name: "Build Service"
+    uses: ./.github/workflows/build.yml
+    with:
+      package: service
+      run-build-command: true
+      upload-artifact: true   
 
   deploy-dev:
     name: "Deploy"
     needs:
-      [build-infra]
+      [build-infra, build-service]
     uses: ./.github/workflows/deploy.yml
     with:
       aws-account-number: "954976306395"
