--- a/service/package.json
+++ b/service/package.json
@@ -29,6 +29,10 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
+  "browser": {
+    "fs": false,
+    "path": false
+},
   "keywords": [],
   "author": "",
   "license": "ISC"
