--- a/service/package.json
+++ b/service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "tsc",
     "cdk": "cdk",
     "watch": "tsc -w"
   },
