--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,6 +16,8 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       package: infra
+      run-build-command: true
+      upload-artifact: true  
 
   build-service:
     name: "Build Service"
