--- a/service/package.json
+++ b/service/package.json
@@ -2,9 +2,8 @@
   "name": "service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack",
     "cdk": "cdk",
     "watch": "tsc -w"
   },
