--- a/service/package.json
+++ b/service/package.json
@@ -19,11 +19,13 @@
   },
   "devDependencies": {
     "@aws-sdk/client-eventbridge": "^3.670.0",
+    "@types/aws-lambda": "^8.10.133",
     "@types/node": "22.5.4",
     "aws-cdk": "2.160.0",
     "aws-sdk": "^2.1691.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
+
     "typescript": "~5.6.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
