--- a/infra/package.json
+++ b/infra/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "22.5.4",
     "aws-cdk": "2.160.0",
+    "esbuild": "^0.24.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
