--- a/infra/package.json
+++ b/infra/package.json
@@ -15,15 +15,14 @@
   "description": "",
   "devDependencies": {
     "@types/node": "22.5.4",
-    "aws-cdk": "2.160.0",
-    "esbuild": "^0.24.0",
+    "aws-cdk": "2.146.0",
+    "esbuild": "0.21.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.160.0",
-    "aws-sdk": "^2.1691.0",
-    "constructs": "^10.3.0",
+    "aws-cdk-lib": "2.146.0",
+    "constructs": "10.4.2",
     "source-map-support": "^0.5.21"
   }
 }
